Fix error on export button being hidden behind tooltip highlight

--- a/app/assets/stylesheets/introjs.css
+++ b/app/assets/stylesheets/introjs.css
@@ -20,7 +20,7 @@
 }
 
 .introjs-fixParent {
-  z-index: auto !important;
+  z-index: 99999999;
   opacity: 1.0 !important;
 }
 
